[package]
name = "wgpu-hello-world"
version = "0.1.0"
authors = ["Marek Fajkus <marek.faj@gmail.com>"]
edition = "2018"
resolver="2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.11.1"
winit = "0.26.0"
env_logger = "0.9.0"
pollster = "0.2.4"
